--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/swag_incarnate"
+        android:icon="@mipmap/ic_swagger_idcon"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/swag_incarnate"
+        android:roundIcon="@mipmap/ic_swagger_idcon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
